test_suite/tests/ui/pass/option_vec_type.rs
use clapi::macros::*;

#[command]
#[option(slice)]
fn test(slice: Vec<u32>){}

fn main(){}