test_suite/tests/ui/fail/invalid_attr_value_for_option/invalid_option_values.rs
use clapi::macros::*;

#[command]
#[option(x, values="1", "2", "3")]
fn app(x: Vec<i64>){}

fn main(){}